--- a/main.css
+++ b/main.css
@@ -334,7 +334,7 @@ button {
 .cta-section {
   background: rgb(213,163,255);
 background: linear-gradient(90deg, rgba(213,163,255,1) 35%, rgba(119,165,248,1) 100%);
-  color: #fff;
+  color: #000000;
   width: auto;
   padding: 60px 20px;
   text-align: center;
