--- a/main.css
+++ b/main.css
@@ -139,10 +139,11 @@ body {
   padding-left: 13px;
   padding-right: 2px;
   font-weight: bold;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .main_2 {
-  margin-left: 18%;
+  margin-left: 7%;
   margin-top: 8%;
   margin-right: 5%;
   flex-direction: row;
@@ -163,6 +164,7 @@ body {
 }
 
 .decrypt {
+ font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: flex;
   margin-left: 5%;
   margin-right: 5%;
@@ -208,6 +210,9 @@ button, input[type="file"] {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  padding:15px;
+  font-weight: bold;
+  font-size:17px;
 }
 
 #file-upload-label {
@@ -217,6 +222,7 @@ button, input[type="file"] {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  font-weight:bold;
 }
 
 #file-upload {
@@ -236,7 +242,8 @@ button, input[type="file"] {
 .or-text {
   margin-top: 5px;
   margin-bottom: 5px;
-  font-size: 18px;
+  font-size: 13px;
+  font-weight: bold;
 }
 
 /* Reset default button styles */
@@ -271,7 +278,8 @@ button {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 15px;
+  font-size: 17px;
+  font-weight:bold;
 }
 
 /* Hover effect for the Download Result button */
@@ -334,7 +342,7 @@ button {
 .cta-section {
   background: rgb(213,163,255);
 background: linear-gradient(90deg, rgba(213,163,255,1) 35%, rgba(119,165,248,1) 100%);
-  color: #000000;
+  color: #fff;
   width: auto;
   padding: 60px 20px;
   text-align: center;
@@ -351,8 +359,8 @@ background: linear-gradient(90deg, rgba(213,163,255,1) 35%, rgba(119,165,248,1) 
 }
 
 .cta-button {
-  background-color:#c57dff;
-  color: rgb(8, 8, 8);
+  background-color:#65318d;
+  color: white;
   padding: 15px 30px;
   font-size: 1.2em;
   text-decoration: none;
